# Quantum-Language

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build_errors.txt  build_log.txt  memory_leak_report.txt  memory_profile.txt  qrun.bat  quantum.bat  test_default_param.sa  test_results.txt  test_shorthand.sa
docs/: CONTRIBUTING.md
docs/code-explanation/: Token.md  Token_h.md  Value.md  Value_h.md
docs/code-explanation/src/main/: README.md
examples/: if-else.sa
examples/Javascript/: 6_game_of_life.sa
include/: Vm.h
src/: Compiler.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Vm.cpp  main.cpp
src/compiler/: CompilerCore.cpp  CompilerExpressions.cpp  CompilerFunctions.cpp  CompilerStatements.cpp
src/parser/: ParserExpressions.cpp  ParserLiterals.cpp  ParserStatements.cpp
src/vm/: VmArrayMethods.cpp  VmCore.cpp  VmNatives.cpp  VmRun.cpp  VmStringMethods.cpp
